# Clank

./: Clank.cabal  README.md  index.html  params.json
app/: Main.hs
app/Clank/Data/: ShowBox.hs  Task.hs
app/Clank/Parser/: Task.hs
app/Clank/Process/: Tasks.hs
src/Logic/Data/: Formula.hs  FormulaPCLaws.hs  Prop.hs
src/Logic/Parser/: Formula.hs  Parser.hs  Prop.hs
src/Logic/Semantics/: Prop.hs
src/Logic/Semantics/Prop/: Internal.hs  K3.hs  L3.hs  LP.hs  PC.hs  RM.hs
