name:                Clank
version:             0.1.0.0
synopsis:            Theorem solver for propositional logics
description:         Please see README.md
homepage:            http://github.com/julmue/Clank#readme
license:             BSD3
license-file:        LICENSE
author:              Julian Müller
maintainer:          jul.mue@hotmail.de
copyright:           2016 Julian Müller
category:            Math
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Logic.Data.Formula
                     , Logic.Data.Prop
                     , Logic.Parser.Formula
                     , Logic.Parser.Prop
                     , Logic.Semantics.Prop
                     , Logic.Semantics.Prop.PC
                     , Logic.Semantics.Prop.K3
                     , Logic.Semantics.Prop.L3
                     , Logic.Semantics.Prop.LP
                     , Logic.Semantics.Prop.RM
  other-modules:       Logic.Semantics.Prop.Internal
  build-depends:       base
                     , containers
                     , parsec
                     , transformers
  default-language:    Haskell2010

executable Clank-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  other-modules:       Clank.Process.Tasks
                     , Clank.Data.ShowBox
                     , Clank.Data.Task
                     , Clank.Parser.Task
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                     , Clank
                     , containers
                     , parsec
                     , transformers
  default-language:    Haskell2010

test-suite Clank-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , Clank
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/Clank
